--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,72 @@
   left: 20px;
 }
 
-.pieChart {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container {
+  margin: 20px;
+  /* border: 2px solid red; */
+  display: grid;
+  /* grid-template-columns: 100px auto 100px 100px; */
+  /* grid-template-columns: auto auto auto auto; */
+  /* grid-template-columns: repeat(4, auto); */
+  grid-template-columns: repeat(4, 1fr);
+  /* grid-template-columns: repeat(4, 100px); */
+
+  /* grid-template-rows: 200px 100px; */
+  grid-auto-rows: 200px;
+  /* justify-content: flex-start; */
+  /* justify-content: center; */
+  /* justify-content: space-evenly; */
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.box {
+  border: 3px solid rgb(235, 231, 231);
+  border-radius: 8px;
+  background-color: rgb(240, 240, 240);
+  padding: 20px;
+}
+
+#box-1 {
+  grid-column-start: 1;
+  grid-column-end: span 2;
+  grid-row-start: 1;
+  grid-row-end: span 2;
+}
+
+.container1_1 {
+  /* margin: 20px; */
+  /* border: 2px solid red; */
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  justify-content: space-between;
+  gap: 30px;
+
+  /* gap: 20px; */
+}
+
+#box1_2 {
+  /* border: 2px solid rgb(0, 255, 115); */
+
+  display: grid;
+  grid-template-columns: auto;
+}
+
+/* #box1_1 {
+  border: 2px solid red;
+}
+
+#box1_2 {
+  border: 2px solid blue;
+} */
+
+.NFTLabel {
+  text-align: center;
+  color: rgba(107, 103, 103, 0.888);
 }
